2015-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/parsePOSIXt.cpp: Remove some no-longer-used code,
	add explicit from conversion from YYYYMMDD to YYYY/MM/DD,
	finer distinction between integer and numeric

	* demo/parsePOSIXt.R: Extended demo file with more examples

2015-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/parsePOSIXt.cpp: Added two more formats; also added
	documentation for help page
	* man/parsePOSIXt.Rd: Generated

2015-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/parsePOSIXt.cpp (parsePOSIXt): Added vectorized function to
	parse date(time) from test and return (UTC) POSIXct objects
	* src/RcppExports.cpp: Auto-created by use of Rcpp Attributes
	* R/RcppExports.R: Auto-created by use of Rcpp Attributes

	* demo/parsePOSIXt.R: Simple demo

	* .travis.yml: Now use ppa:edd/misc for r-cran-rcpp

2014-04-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.3

	* DESCRIPTION: Depends on R (>= 3.1.0) for C++11 and long long

2014-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDT.h: Turn off explicit smart pointer conversion
	via #define BOOST_NO_CXX11_EXPLICIT_CONVERSION_OPERATORS, see
	http://stackoverflow.com/a/15234757/143305 for more

2014-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars{,.win} (PKG_CPPFLAGS): Use '=' instead of '+='

2014-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Updated to current standard of enabling C++11 with
	R-devel (ie R 3.1.0 with expected release in less than four weeks)
	* src/Makevars.win: Ditto

2014-03-08  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppBDTpt.cpp (Rcpp): Bug fix for fractional seconds component
	of RcppBDTpt as<>() method (with thanks to Castedo Ellerman)

2014-02-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Simplified for use with Rcpp (>= 0.11.0)
	* src/Makevars.win: Ditto

	* src/Makevars: Define 'USE_CXX11=' for use with R-devel as we need
	C++11 for the 'long long int' type used on 64-bit machines for int64