@@ -1,10 +1,10 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/RcppExports.R
-\name{parsePOSIXt}
-\alias{parsePOSIXt}
+\name{toPOSIXct}
+\alias{toPOSIXct}
 \title{Parse POSIXct objects from character variables}
 \usage{
-parsePOSIXt(x)
+toPOSIXct(x)
 }
 \arguments{
 \item{x}{A vector of type character, integer or numeric with
@@ -42,9 +42,9 @@ times <- c("2004-03-21 12:45:33.123456",
           "20040321",
           "03/21/2004",
           "03-21-2004",
-          "20010101")   ## bug -- gets parsed as 2001-10-01
-parsePOSIXt(times)
-format(parsePOSIXt(times), tz="UTC")
+          "20010101")   ## bug on the Boost side -- gets parsed as 2001-10-01
+toPOSIXct(times)
+format(toPOSIXct(times), tz="UTC")
 }
 \author{
 Dirk Eddelbuettel
